bk_ida/gccida/c2/dwarf2out_frame_debug
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2104:12: error: expected expression
*( _OWORD *)&cfa.offset = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2104:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.offset = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2120:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = -1LL; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2120:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'long long'
cfa_temp_0 = -1LL; 
           ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2141:7: error: use of undeclared identifier 'dwarf2out_cfi_label_label_num'
v13 = dwarf2out_cfi_label_label_num++; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2142:10: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
sprintf( dwarf2out_cfi_label_label, "*.%s%u", "LCFI", v13); 
         ^~~~~~~~~~~~~~~~~~~~~~~~~
         dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2143:39: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
assemble_name( ( FILE *)asm_out_file, dwarf2out_cfi_label_label); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~
                                      dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2149:35: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
dwarf2out_frame_debug_expr( *fld, dwarf2out_cfi_label_label); 
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~
                                  dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2158:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( unsigned __int16 *)insn[2]; 
                           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2203:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v4 = -args_size_0; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2207:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2238:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v5 = args_size_0 + v4; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2241:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = v5; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2242:6: error: use of undeclared identifier 'dwarf2out_cfi_label_label_num'
v6 = dwarf2out_cfi_label_label_num++; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2243:10: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
sprintf( dwarf2out_cfi_label_label, "*.%s%u", "LCFI", v6); 
         ^~~~~~~~~~~~~~~~~~~~~~~~~
         dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2244:39: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
assemble_name( ( FILE *)asm_out_file, dwarf2out_cfi_label_label); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~
                                      dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2246:12: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
def_cfa_1( dwarf2out_cfi_label_label, &cfa); 
           ^~~~~~~~~~~~~~~~~~~~~~~~~
           dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2247:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v7 = args_size_0; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:2248:23: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
if ( old_args_size != args_size_0 ) 
                      ^~~~~~~~~~~
                      args_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_frame_debug/src/obj/dwarf2out.o] Error 1
